--- a/00_start camp/day4/second_flask/templates/send.html
+++ b/00_start camp/day4/second_flask/templates/send.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Send message here</h1>
-    <form action="/receive" method="POST">
+    <form action="/receive">
         <input type="text" name="msg">
         <input type="submit" value="보내기">
     </form>
