--- a/02_web/02_CSS/04_boxmodel.css
+++ b/02_web/02_CSS/04_boxmodel.css
@@ -1,7 +1,7 @@
 div {
     border: solid 1px black;
     padding: 10px 1px 10px 10px;  /*시계방향*/
-    margin: 10px /*상하좌우 전부 10px*/
+    margin: 10px; /*상하좌우 전부 10px*/
 }
 
 div.a {
