--- a/06_django_advance/01_DJANGO_RECAP/board/templates/board/list.html
+++ b/06_django_advance/01_DJANGO_RECAP/board/templates/board/list.html
@@ -4,6 +4,8 @@
 {% block body %}
 <h1>This is Article list</h1>
 
+<a href="{% url 'board:new' %}">New article</a>
+
 <ul>
     {% for article in articles %} <!-- [<A1>, <A2>, ...] / list 니깐 하나씩 꺼내야한다. -->
         <li>
