--- a/06_django_advance/01_DJANGO_RECAP/board/templates/board/edit.html
+++ b/06_django_advance/01_DJANGO_RECAP/board/templates/board/edit.html
@@ -6,18 +6,26 @@
 <h1>Edit article</h1>
 
 
-<form action="{% url 'board:update' article.id %}" method="POST">
+{% comment %} <form action="{% url 'board:update' article.id %}" method="POST"> {% endcomment %}
+
+{% comment %} <form action="" method="POST">
     {% csrf_token %} 
-    <div>
-        <label for="title">제목:</label>
-        <input id="title" name="title" value="{{ article.title }}">
-    </div>
-    <div>
-        <label for="content">내용:</label>
-        <textarea id="content" name="content" cols="30" rows="10">{{ article.content }}</textarea>
-    </div>
-    <div>
-        <input type="submit" value="제출!">
-    </div>
-</form>
+       <div>
+            <label for="name">Name</label>
+            <input id="name" type="text" name="name">
+        </div>
+        <div>
+            <label for="age">Age</label>
+            <input id="age" type="text" name="age">
+        </div>
+            <label for="major">Major</label>
+            <input id="major" type="text" name="major">
+
+        <div>
+            <input type="submit" value="EDIT">
+        </div>
+    </form>
+</form> {% endcomment %}
+
+{% include  'board/_form.html' %}
 {% endblock  %}
