--- a/06_django_advance/01_DJANGO_RECAP/board/templates/board/list.html
+++ b/06_django_advance/01_DJANGO_RECAP/board/templates/board/list.html
@@ -9,7 +9,8 @@
 <ul>
     {% for article in articles %} <!-- [<A1>, <A2>, ...] / list 니깐 하나씩 꺼내야한다. -->
         <li>
-            <a href="{% url 'board:detail' article.id %}">
+            {% comment %} <a href="{% url 'board:detail' article.id %}"> {% endcomment %}
+            <a href="{{ article.get_absolute_url }}">
                 {{ article.title }}</a>
         </li> <!-- <A1> -->
     {% endfor %}
