--- a/06_django_advance/01_DJANGO_RECAP/board/templates/board/new.html
+++ b/06_django_advance/01_DJANGO_RECAP/board/templates/board/new.html
@@ -4,11 +4,21 @@
 
 {% block body %}
 <h1>New article</h1>
+<form method="POST">
+    {% csrf_token %}
+    {{ form.as_p }}  <!--p 태그에 넣는다-->
+    <input type="submit">
 
+</form>
 
-<form action="{% url 'board:create'%}" method="POST">
 <!--action : 받는 사람의 주소 -->
+{% comment %} <form action="{% url 'board:create' %}" method="POST"> <!--어디로 봉투를 보내야하는지 알려주는 것-->  {% endcomment %}
+{% comment %} <form action="{% url 'board:new' %}" method="POST"> {% endcomment %} 
+
+{% comment %} <form method="POST"> <!--제자리 뛰기니깐 필요가 없어진다. -->
+
     {% csrf_token %} <!-- POST 는 안에 토큰을 하나 넣어줘야한다. 봉투안에-->
+
     <div>
         <label for="title">제목:</label>
         <input id="title" name="title">
@@ -21,5 +31,8 @@
     <div>
         <input type="submit" value="제출!">
     </div>
-</form>
+</form> {% endcomment %}
+
+{% comment %} {% include 'board/_form.html' %} {% endcomment %}
+
 {% endblock  %}
