--- a/06_django_advance/01_DJANGO_RECAP/board/templates/board/_form.html
+++ b/06_django_advance/01_DJANGO_RECAP/board/templates/board/_form.html
@@ -1,5 +1,13 @@
 <form method="POST">
     {% csrf_token %}
+    {{ form.as_p }}  
+    <input type="submit">
+</form>
+
+
+
+{% comment %} <form method="POST">
+    {% csrf_token %}
 
     <div>
         <label for="title">제목:</label>
@@ -15,4 +23,4 @@
     </div>
 </form>
 
-<!--부품으로 사용하는 법 -->
+<!--부품으로 사용하는 법 --> {% endcomment %}
