--- a/06_django_advance/01_DJANGO_RECAP/board/templates/board/list.html
+++ b/06_django_advance/01_DJANGO_RECAP/board/templates/board/list.html
@@ -6,6 +6,7 @@
 
 <a href="{% url 'board:new' %}">New article</a>
 
+{% if articles %}  <!-- articles 에 아무것도 없으면 실행되지 않게 하기 위해 -->
 <ul>
     {% for article in articles %} <!-- [<A1>, <A2>, ...] / list 니깐 하나씩 꺼내야한다. -->
         <li>
@@ -15,4 +16,6 @@
         </li> <!-- <A1> -->
     {% endfor %}
 </ul>
+{% endif %}
+
 {% endblock %}
