--- a/06_django_advance/01_DJANGO_RECAP/board/templates/board/detail.html
+++ b/06_django_advance/01_DJANGO_RECAP/board/templates/board/detail.html
@@ -8,10 +8,10 @@
     </p>
     <div>
         <!--a b 순서이다 ㅎ-->
-        <a href="{% url 'board:edit' article.id %}"> 
+        <a href="{% url 'board:edit_article' article.id %}"> 
         <!-- 가변 처리해야하는 부분은 처리해줘야한다. -->
         {% comment %} <a href="/board/articles/{{ article.id }}/edit"> {% endcomment %}
-            <button>Edit</button>
+            <button>수정</button>
         </a>
     </div>
     <div>
@@ -22,19 +22,38 @@
         데이터 베이스를 건드는 것은 POST 라고 했는데... 
         {% endcomment %}
         
-        <form action="{% url 'board:delete' article.id %}" method="POST">
+        <form action="{% url 'board:delete_article' article.id %}" method="POST">
             {% csrf_token %}  
             <input id="delButton" type="submit" value="삭제">
         </form>
     </div>
 
+    <hr>
+
+    <form action="{% url 'board:new_comment' article.id %}" method="POST">
+        {% csrf_token %}
+        <input type="text" name="comment_content">
+        <input type="submit">
+    </form>
+
+    <!--comment 모두 가져오는 부분 -->
+    {% if comments %}
+        <ul>
+            {% for comment in comments %}
+                <li>{{ comment.content }}</li>
+            
+            {% endfor %}
+        </ul>
+    
+    {% endif %}
+
     <!--자바스크립드st-->
-    <script>
+    {% comment %} <script>
         const deleteButton = document.querySelector('#delButton');
         function writeHi () {
             document.write('Hi');
             
         }
         delButton.addEventListener('mouseover', writeHi);
-    </script>
+    </script> {% endcomment %}
 {% endblock %}
