image-upload & accounts app | 191016

--- a/06_django_advance/03_IMAGE_UPLOAD/sns/templates/sns/_header.html
+++ b/06_django_advance/03_IMAGE_UPLOAD/sns/templates/sns/_header.html
@@ -1,17 +1,53 @@
-<header>
-    <form action="{% url 'sns:create_posting' %}" enctype="multipart/form-data" method="POST">  <!--enctype="multipart/form-data" form 안에 파일을 넣을려면 꼭 써줘야한다. -->
-        {% csrf_token %}
-        <div class="form-row align-items-center">
-            <label for="content" class="sr-only">content</label>  <!--sr-only : 실제로 화면에서는 보이지 않는다. -->
-            <input id="content" type="text" name="content">
-            
-            <!-- type 이 file 이면 enctype="multipart/form-data" 설정을 해줘야 받아볼 수 있다. -->
-            <input id-"image" name="image" type="file" accept="image/*">  <!--accept="image/*" : 이미지 파일들 중에서 파일을 선택할 수 있게 -->
-            <label for="image"></label>
+<header class="mt-4 mb-4">
+  <form action="{% url 'sns:create_posting' %}" enctype="multipart/form-data" method="POST">
+    {% csrf_token %}
 
-            <button type="submit" class="btn btn-primary">Submit</button>
-    
+    <div class="form-row align-items-center">
+      
+      <!-- icon select tag -->
+      <div class="col-auto my-1">
+        <label for="icon" class="sr-only">icon</label>
+        <select name="icon" id="icon" class="custom-select mr-sm-2">
+          <option value="fas fa-question">?</option>
+          <option value="far fa-smile">:)</option>
+          <option value="far fa-angry">:(</option>
+          <option value="far fa-smile-wink">;)</option>
+          <option value="fab fa-angrycreative">flex</option>
+        </select>
+      </div>
+
+      <!-- content input -->
+      <div class="col-sm-6 my-1">
+        <label for="content" class="sr-only">content</label>
+        <input id="content" type="text" name="content" class="form-control" placeholder="feels like.."> 
+      </div>
+
+      <!-- image file input -->
+      <div class="col-sm-4 my-1 input-group">
+        <div class="input-group-prepend">
+          <span class="input-group-text">Upload</span>
         </div>
-    </form>
 
+        <div class="custom-file">
+          <input id="image" class="custom-file-input" name="image" type="file" accept="image/*">
+          <label for="image" class="custom-file-label">Choose image</label>
+        </div>
+      </div>
+
+      <!-- submit button -->
+      <div class="col-auto my-1">
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </div>
+
+    </div>
+  </form>
 </header>
+
+
+{% comment %} <label for="content" class="sr-only">content</label>  <!--sr-only : 실제로 화면에서는 보이지 않는다. -->
+    <input id="content" type="text" name="content">
+    
+    <!-- type 이 file 이면 enctype="multipart/form-data" 설정을 해줘야 받아볼 수 있다. -->
+    <input id-"image" name="image" type="file" accept="image/*">  <!--accept="image/*" : 이미지 파일들 중에서 파일을 선택할 수 있게 -->
+    <label for="image"></label>
+ {% endcomment %}
