--- a/06_django_advance/03_IMAGE_UPLOAD/sns/templates/sns/posting_list.html
+++ b/06_django_advance/03_IMAGE_UPLOAD/sns/templates/sns/posting_list.html
@@ -1,23 +1,17 @@
 {% extends 'sns/base.html' %}
 
-{% block title %}{% endblock title %}
+{% block title %}{% endblock %}
+
+{% block list %}active{% endblock list %}
 
 {% block body %}
-
-  {% include 'sns/_header.html' %}  <!---->
+  {% include 'sns/_header.html' %}
 
   {% if postings %}
-  
-      <section>
-          {% for posting in postings %}
-              <article>
-                  <a href="{{ posting.get_absolute_url }}">
-                      <img src="{{ posting.image.url }}" alt="{{ posting.image }}">
-                  </a>
-              </article>
-          {% endfor %}
-      </section>
-
+    <section class="card-columns">
+      {% for posting in postings %}
+        {% include 'sns/_card.html' %}
+      {% endfor %}
+    </section>
   {% endif %}
-
-{% endblock body %}
+{% endblock %}
