--- a/06_django_advance/03_IMAGE_UPLOAD/sns/templates/sns/posting_detail.html
+++ b/06_django_advance/03_IMAGE_UPLOAD/sns/templates/sns/posting_detail.html
@@ -1,18 +1,47 @@
 {% extends 'sns/base.html' %}
 
-{% block title %}{% endblock title %}
+{% block title %}{% endblock %}
+
+{% block detail %}active{% endblock detail %}
 
 {% block body %}
-
 <div class="row mt-3">
-    <div class="col-12  col-md-6">
-        {% if posting.image %}
-            <!--이미지 불러오는 방법-->
-            <img src="{{ posting.image.url }}" alt="{{ posting.image }}">
-            
-        {% endif %}
+
+  <div class="col-12 col-md-6">
+    <div class="card">
+      {% if posting.image %}
+        <img class="card-img-top image-fluid" src="{{ posting.image.url }}" alt="{{ posting.image }}">
+       {% else %}
+        <img class="card-img-top image-fluid" src="https://picsum.photos/400/200" alt="random-image">
+      {% endif %}
+
+      <div class="card-body">
+        <i class="fab fa-angrycreative fa-3x"></i>
+        <hr>
+
+        <div class="row">
+            <div class="col-10">
+                <p class="card-text">{{ posting.content }}</p>
+                
+            </div>
+
+            <div class="col-2">
+            <form action="{% url 'sns:delete_posting' posting.id %}" method="POST">
+            {% csrf_token %}
+                <button>
+                    <i class="fas fa-trash"></i>
+                </button>
+                
+            </form>
+        </div>
+        
+        </div>
+      </div>
     </div>
+  </div>
+    
+{% include 'sns/_comment.html' %}
 
 </div>
+{% endblock %}
 
-{% endblock body %}
