--- a/06_django_advance/01_DJANGO_RECAP/home/templates/home/index.html
+++ b/06_django_advance/01_DJANGO_RECAP/home/templates/home/index.html
@@ -1,4 +1,5 @@
-{% extends 'home/base.html' %}  
+{% comment %} {% extends 'home/base.html' %}   {% endcomment %}
+{% extends 'base.html' %}  
 
 {% block title %}
     INDEX
