--- a/06_django_advance/03_IMAGE_UPLOAD/sns/templates/sns/_navbar.html
+++ b/06_django_advance/03_IMAGE_UPLOAD/sns/templates/sns/_navbar.html
@@ -1,4 +1,4 @@
-<nav>
+<nav class="mb-3">
     <ul class="nav nav-tabs">
         <li class="nav-item">
             <a href="{% url 'sns:posting_list' %}" class="nav-link {% block list %}{% endblock list %}">SNS</a>
@@ -6,6 +6,27 @@
         <li class="nav-item">
             <a class="nav-link {% block detail %}{% endblock detail %}" aria-disabled="true">Detail</a>
         </li>
+
+
+        {% if user.is_authenticated %}
+            <li class="nav-item">
+                <a href="{% url 'accounts:logout' %}" class="nav-link">Logout</a>
+            </li>
+            <li class="nav-item">
+                <a href="#" class="nav-link">{{ user.username }}</a>
+            </li>
+
+        {% else %}
+            <li class="nav-item">
+                <a href="{% url 'accounts:signup' %}" class="nav-link">Signup</a>
+            </li>
+            <li class="nav-item">
+                <a href="{% url 'accounts:login' %}" class="nav-link">Login</a>
+            </li>
+
+        {% endif %}
+
     </ul>
+
 
 </nav>
