--- a/06_django_advance/03_IMAGE_UPLOAD/sns/templates/sns/posting_list.html
+++ b/06_django_advance/03_IMAGE_UPLOAD/sns/templates/sns/posting_list.html
@@ -5,8 +5,9 @@
 {% block list %}active{% endblock list %}
 
 {% block body %}
+{% if user.is_authenticated %} <!-- 로그인 한 사람만 보일 header 보일 수 있게 -->
   {% include 'sns/_header.html' %}
-
+{% endif %} 
   {% if postings %}
     <section class="card-columns">
       {% for posting in postings %}
