--- a/06_django_advance/03_IMAGE_UPLOAD/sns/templates/sns/_comment.html
+++ b/06_django_advance/03_IMAGE_UPLOAD/sns/templates/sns/_comment.html
@@ -1,37 +1,37 @@
 <div class="col-12 col-md-6">
 
-    <div class="card mb-2">
-      <div class="card-body">
-        <form action="{% url 'sns:create_comment' posting.id %}" method="POST">
-          {% csrf_token %}
-          <label for="comment">leave comment</label>
-          <input type="text" name="content" id="comment" class="form-control">
-        </form>
-      </div>
+  <div class="card mb-2">
+    <div class="card-body">
+      <form action="{% url 'sns:create_comment' posting.id %}" method="POST">
+        {% csrf_token %}
+        <label for="comment"><strong>{{ user }} </strong>leave comment</label>  <!--요청보낸 사람 == user / request.user 를 user 라고 쓰기만 해도 된다. -->
+        <input type="text" name="content" id="comment" class="form-control">
+      </form>
     </div>
+  </div>
 
-    <div class="card">
-      <ul class="list-group list-group-flush">
-        {% if comments %}
-            {% for comment in comments %}
-            <li class="list-group-item mb-1">익명{{ forloop.counter }}: {{ comment.content }}
-            
-            
-            <form action="{% url 'sns:delete_comment' posting.id comment.id%}" method="POST">
-                {% csrf_token %}
-                    <button>
-                        <i class="fas fa-trash"></i>
-                    </button>
-            </form>
-            
-            </li>
-            {% endfor %}
-        {% else %}
-             <li class="list-group-item mb-1">No comment</li>
-        {% endif %}
-       
-        
-      </ul>
-    </div>
+  <div class="card">
+    <ul class="list-group list-group-flush">
+      {% if comments %}
+      {% for comment in comments %}
+      <li class="list-group-item mb-1">{{ comment.user }} | {{ comment.content }}  <!-- {{ forloop.counter }} | {{ comment.content }} -->
+      
+        <form action="{% url 'sns:delete_comment' posting.id comment.id%}" method="POST">
+          {% csrf_token %}
+          <button>
+            <i class="fas fa-trash"></i>
+          </button>
+        </form>
+      
+      </li>
+      {% endfor %}
+
+      {% else %}
+      <li class="list-group-item mb-1">No comment</li>
+      {% endif %}
+
+
+    </ul>
+  </div>
 
 </div>
