django add vue & vue

--- a/06_django_advance/04_INSTARGRAM/postings/templates/postings/_posting.html
+++ b/06_django_advance/04_INSTARGRAM/postings/templates/postings/_posting.html
@@ -23,21 +23,25 @@
 
     <div class="card-body">
 
-        <form action="{% url 'postings:like' posting.id  %}" method="POST">
-            {% csrf_token %}
+        {% comment %} <form action="{% url 'postings:like' posting.id  %}" method="POST"> {% endcomment %}
+            {% comment %} {% csrf_token %} {% endcomment %}
             <button style="border: 0; background: none;">
-                {% if is_like %}
-                <i class="fas fa-heart fa-lg" style="color: #ed4956;"></i>
-
-                {% else %}
-                <i class="fas fa-heart fa-lg" style="color: black;">
+                {% comment %} {% if is_like %} {% endcomment %}
+                {% comment %} <i class="fas fa-heart fa-lg" style="color: #ed4956;"></i> {% endcomment %}
+                <i class="{% if is_like %}fas{% else %}far {% endif %} fa-heart js-like-button"
+                    data-id="{{ posting.id }}"
+                    style="color:crimson"
+                ></i>
+                {% comment %} {% else %} {% endcomment %}
+                {% comment %} <i class="fas fa-heart fa-lg" style="color: black;">
                     <span class="badge badge-light"></span>
-                </i>
-                {% endif %}
+                </i> {% endcomment %}
+                {% comment %} {% endif %} {% endcomment %}
             </button>
-        </form>
+        {% comment %} </form> {% endcomment %}
 
         <p class="card-text">{{posting.content}}</p>
         <a href="{% url 'postings:update_posting' posting.id %}" class="btn btn-warning">수정</a>
     </div>
 </div>
+
